package baidu;

option java_package = "com.baidu";
option java_outer_classname = "BaiduBidResponse";

message BidResponse {
    required string request_id = 1; // required. The access party of corresponding request shall customize the request ID.
    repeated Ad ads = 2; // optional. Response ad. Return of multiple ads is supported currently.
    optional uint64 error_code = 3; // optional. The error code produced by error request is used for problem troubleshooting. Please refer to Table of Comparisons of API Error Code for the corresponding logic of error code
    optional uint32 expiration_time = 4; // optional. UTC time upon expiration of ad list, which is used for non-real-time ads
};
message Ad {
    optional string adslot_id = 1; // optional. ID of corresponding adslot, providing support for simultaneous request to support pluralities of ads in future.
    optional uint32 buyer_id = 2; // optional. DSP ID, analysis fields, which will not affect ad exposure
    optional uint32 ad_id = 3; // optional. Creative ID,  analysis fields, which will not affect ad exposure
    optional string html_snippet = 4; // optional. HTML snippet, which is used by HTML material and does not support ADX for API flow currently, so the field is ignored.
    optional MaterialMeta material_meta = 5; // optional. Metadata of materials, which is used by materials other than HTML materials. Please refer to 3.2.1 Ad Material Source Information for the detailed population specification
    optional uint32 impression_time = 6; // optional. Material impression time, which is used by timing exposure adslot.
    optional uint32 targeted_hours = 7; // optional. Targeted hours, which is used for non-real-time adslot
};
message MaterialMeta {
    required CreativeType creative_type = 1; // required. Creative type of the ads. Please refer to 2.11 Creative Type for the list of values
    required InteractionType interaction_type = 2; // required. Interaction Type supported by the ads. Please refer to 2.12 Interaction Type for the list of values
    repeated string win_notice_url = 3; // required. URL list of exposure log. Please notice that win_notice_url is a url list which contains a series of exposure monitoring, and the url thereof shall request actively for report and exposure one by one after success of ad exposure.

    optional string title = 4; // optional. Ads title
    optional string description1 = 5; // optional. Ad description 1
    optional string description2 = 6; // optional. Ad description 2, supplement description
    optional string media_url = 7; // optional. Multimedia resource URL (icon, image and video), media source stored url of text and image ads.
    optional string show_url = 8; // optional. Short website for exposure, which is used for the short address that is shown on ads directly
    optional string click_url = 9; // optional. Click behavior address to provide clicking address for the ads with available clicking behavior. Clicking address, as clicking response address, is unnecessary to send request additionally to report clicking.
    optional string icon_url = 10;// optional. Ad icon. The Logo information of the ads that are required to advertising non-image ads can be acquired from the field.
    repeated string cached_url = 11;//  optional. List of address for cached report, which is a list set for the ads available for cache and may have a plurality of reporting address and shall report one by one.
    optional string name = 12;// optional. Name applied in current ads. Set for the ads downloaded. It is optional for whether to expose on demand.

    enum CreativeType {
        TEXT = 1; // text
        IMAGE = 2; // image
        HTML = 3; // HTML
        VIDEO = 4; // video
        TEXT_ICON = 5; // text
    };

    enum InteractionType {
        NO_INTERACTION = 0; // no interaction, which is used for splash and other special positions and cannot be used for request, but only for response
        SURFING = 1; // open the website with browser
        DOWNLOAD = 2; // download application
        DIALING = 3; // dial number
        MESSAGE = 4; // send SMS
        MAIL = 5; // send email
    };
};


